--- a/src/css/common.css
+++ b/src/css/common.css
@@ -8,11 +8,135 @@
 
 body {
   margin: 24px 156px;
-  display: inline-block;
 }
 
 ul {
   list-style-type: none;
   margin: 0;
   padding-left: 0;
+}
+
+#datetime-picker {
+  border: 1px solid #808080;
+  border-radius: 4px;
+  width: 272px;
+  height: 40px;
+
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-top: 8px;
+  padding-bottom: 8px;
+
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+button[data-start] {
+  margin-left: 8px;
+
+  border-radius: 8px;
+  border-width: 0px;
+  padding: 8px 16px;
+  width: 75px;
+  height: 40px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+
+  color: #fff;
+  background: #4e75ff;
+}
+
+button[data-start]:hover,
+button[data-start]:focus {
+  background: #6c8cff;
+  color: #fff;
+}
+
+button[data-start]:disabled {
+  background: #cfcfcf;
+  color: #989898;
+}
+
+.timer {
+  margin-top: 32px;
+
+  display: flex;
+  flex-direction: row;
+  gap: 24px;
+}
+
+.field {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.field .value {
+  font-weight: 400;
+  font-size: 40px;
+  line-height: 1.2;
+  letter-spacing: 0.04em;
+  color: #2e2f42;
+}
+
+.field .label {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  color: #2e2f42;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  width: 360px;
+}
+
+.form label {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.form fieldset {
+  margin-top: 16px;
+  padding: 8px;
+
+  display: flex;
+  flex-direction: row;
+  gap: 54px;
+}
+
+.form fieldset label {
+  display: flex;
+  flex-direction: row;
+}
+
+.form button {
+  margin-top: 24px;
+
+  border-radius: 8px;
+  border-width: 0px;
+  padding: 8px 16px;
+  width: 360px;
+  height: 40px;
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #fff;
+
+  background: #4e75ff;
+}
+
+.form button:hover,
+.form button:focus {
+  background: #6c8cff;
 }
